assets/style.css
* {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
}
body {
    background-image: linear-gradient(rgba(233,214,236,1), rgba(232,204,191,1), rgba(207,185,165,1));
    background-color: rgba(232,204,191,1);
    background-repeat: no-repeat;
    background-size: 100%;
    margin: 0;
   
}

.btn {
    color: rgba(129,150,143,1)
}

.header {
    padding: 30px;
    margin: 0px;
    border: 0px;
    font-size: 30px;
    background-color: rgba(129,150,143,1);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
  
}
.myname {
      animation: backInRight;
    animation-duration: 3s;
}
h1{
    margin: 0;
}


.topnav {
    float: right;
}
 .header nav {
     font-size: 20px;
 }

 /* .row {
     display: flex;
     padding: 10px;
    
 } */

 /* .about {
    display: inline-flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
    width: 100vw;
 }

 .photo {
     display: flex;
 }
 
 #about,#work,#contact,p {
     text-align: center;
 }

.columnmiddle {
    display: block;
    align-items: center;
}

.workheader {
    display: block;
    align-items: center;
    text-align: center;
}

.work {
    display: inline-flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
    width: 100vw;
} */

/* 
.project {
    display: flex;
    flex-direction: column;
    align-items: center;
    display: block;
    align-items: center;
    position: relative;
    width: 90vw
    
}

#secondary-imgs {
    display: flex;
    justify-content: space-around;
    width: 60vw;
}

.container {
    display: flex;
    flex-wrap: wrap;
    position: relative;
}

.image {
    display: flex;
    width: 100%;
    height: auto;
  } */
  .overlay {
    position: absolute;
    bottom: 0;
    background: rgb(150, 189, 198);
    background: rgba(150, 189, 198, 0.5);
    color: #f1f1f1;
    width: 85%;
    transition: .5s ease;
    opacity:0;
    color: white;
    font-size: 20px;
    padding: 20px;
    text-align: center;
  }
  
  /* .container:hover .overlay {
    opacity: 1;
  } */

.two {
    display: flex;
}

#one:hover {
    
    border: 5px solid rgba(150,189,198,1);
}
#two:hover {
    
    border: 5px solid rgba(150,189,198,1);
}
#three:hover {
    
    border: 5px solid rgba(150,189,198,1);
}
#four:hover {
    
    border: 5px solid rgba(150,189,198,1);
}

/* .contact {
    align-self: flex-end;
   display: block;
   text-align: center;
   justify-content: space-between; 
}
h2 {
    align-items: center;
}


li {
    display: inline-flex;  
     
}

footer {
    padding-left: 30px;
    text-align: center;
    
}
.details {
    list-style: none;
    display: inline;
    
} */

  @media screen and (max-width: 768px) {
    .row {
      flex-direction: column;
    }
    
  }

  @media screen and (max-width: 768px) {
    #one {
      width: 300px;
      height: 300px;
    }
    
  }

